# VesiKolayPro

./: README.md  app.py  config.py  excel_reader.py  main.py  ornek_liste.xlsx  pdf_generator.py  photo_processor.py  pyproject.toml  requirements.txt  update_checker.py  utils.py
