[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.3",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "seaborn>=0.13.2",
]
